# ollama-ai-app-panw

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.yaml.exemple
.github/workflows/: docker-publish-multi-platform.yml
config-examples/: NOPAWN.llama2-uncensored_latest-1747909327080.json  PANW.llama2-uncensored_latest-1747909321539.json  config-1747909231428.json
docker/: .env.example  DEPLOYMENT.md  README.md  docker-compose.apple.yaml  docker-compose.win.yaml  docker-compose.yaml
src/: config.rs  main.rs  ollama.rs  security.rs  stream.rs  types.rs
src/handlers/: chat.rs  embeddings.rs  generate.rs  mod.rs  passthrough.rs  utils.rs
tests/: smoke.rs
tests/fixtures/: scan_response_blocked.json  scan_response_dlp_masked.json  scan_response_minimal.json  scan_response_with_new_fields.json
