[package]
name = "panw-api-ollama"
version = "0.17.0"
edition = "2021"

[profile.release]
# LTO + single codegen unit gives ~5-15% throughput on the streaming hot path
# at the cost of slower release builds; codegen-units=1 also reduces binary
# size. `strip = true` removes debug symbols from the final binary.
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
tower-http = { version = "0.6.11", features = ["trace"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
futures-util = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
thiserror = "2.0.18"
bytes = "1.11.1"
async-stream = "0.3.6"
http-body-util = "0.1.3"
chrono = { version = "0.4.44", features = ["serde", "clock"], default-features = false }
pin-project = "1.1.13"
secrecy = { version = "0.10.3", features = ["serde"] }
